packages/admin-ui-docs/versioned_docs/version-0.136.0/templates/listing page/code.mdx
---
title: Code
path: /listing page/code/
hide_table_of_contents: true
---

## Basic

<Sandpack>

```jsx App.js
import ListingPage from './ListingPage'
import { ToastProvider } from '@vtex/admin-ui'
import { I18nProvider } from '@react-aria/i18n'

export default function App() {
  return (
    <I18nProvider locale="en-US">
      <ToastProvider>
        <ListingPage />
      </ToastProvider>
    </I18nProvider>
  )
}
```

```jsx ListingPage.js
import {
  Page,
  PageContent,
  PageHeader,
  PageHeaderActions,
  PageHeaderTitle,
  PageHeaderTop,
  PageHeaderButton,
  IconPlus,
  createColumns,
  useTableState,
  useDataViewState,
  Table,
  THead,
  THeadCell,
  TBody,
  TBodyRow,
  TBodyCell,
  Tag,
  DataView,
  DataViewHeader,
  Search,
  IconPencil,
  IconEye,
  csx
} from '@vtex/admin-ui'

const ITEMS_PER_PAGE = 25

export const items = [...Array(74).keys()].map((id) => {
  return {
    id: `${id}`,
    name: 'Name',
    textField: 'Text',
    tagField: 'Short text',
  }
})

export default function ListingPage() {
  const view = useDataViewState()

  const columns = createColumns([
    {
      id: 'name',
      header: 'Name',
    },
    {
      id: 'textField',
      header: 'Label',
      width: '5rem',
    },
    {
      id: 'tagField',
      header: 'Label',
      sortable: true,
      width: '8rem',
      resolver: {
        type: 'root',
        render: ({ item }) => {
          return <Tag label={item.tagField} />
        },
      },
    },
    {
      id: 'menu',
      width: '5rem',
      resolver: {
        type: 'menu',
        actions: [
          {
            label: 'View details',
            icon: <IconEye />,
            onClick(item) {
              console.warn({ item })
            },
          },
          {
            label: 'Edit',
            icon: <IconPencil />,
            onClick(item) {
              console.warn({ item })
            },
          },
        ],
      },
    },
  ])

  const { data, getBodyCell, getHeadCell, getTable } = useTableState({
    status: view.status,
    columns,
    items,
    length: ITEMS_PER_PAGE,
  })

  return (
    <Page>
      <PageHeader>
        <PageHeaderTop>
          <PageHeaderTitle>Items</PageHeaderTitle>
          <PageHeaderActions>
            <PageHeaderButton
              icon={<IconPlus />}
              onClick={() => alert('Redirect to create item action')}
            >
              Create item
            </PageHeaderButton>
          </PageHeaderActions>
        </PageHeaderTop>
      </PageHeader>
      <PageContent layout="wide">
        <DataView state={view}>
          <DataViewHeader>
            <Search />
          </DataViewHeader>

          <Table {...getTable()} className={csx({ width: '100%' })}>
            <THead>
              {columns.map((column) => (
                <THeadCell {...getHeadCell(column)} />
              ))}
            </THead>
            <TBody>
              {data.map((item) => {
                return (
                  <TBodyRow key={item.id}>
                    {columns.map((column) => {
                      return <TBodyCell {...getBodyCell(column, item)} />
                    })}
                  </TBodyRow>
                )
              })}
            </TBody>
          </Table>
        </DataView>
      </PageContent>
    </Page>
  )
}
```

</Sandpack>

## Full blown example

<Sandpack>

```jsx App.js
import ListingPage from './ListingPage'
import { ToastProvider } from '@vtex/admin-ui'
import { I18nProvider } from '@react-aria/i18n'

export default function App() {
  return (
    <I18nProvider locale="en-US">
      <ToastProvider>
        <ListingPage />
      </ToastProvider>
    </I18nProvider>
  )
}
```

```jsx ListingPage.js
import {
  Page,
  PageContent,
  PageHeader,
  PageHeaderActions,
  PageHeaderTitle,
  PageHeaderTop,
  PageHeaderButton,
  IconPlus,
} from '@vtex/admin-ui'
import ItemsDataView from './ItemsDataView'

export default function ListingPage() {
  return (
    <Page>
      <PageHeader>
        <PageHeaderTop>
          <PageHeaderTitle>Items</PageHeaderTitle>
          <PageHeaderActions>
            <PageHeaderButton
              icon={<IconPlus />}
              onClick={() => alert('Redirect to create item action')}
            >
              Create item
            </PageHeaderButton>
          </PageHeaderActions>
        </PageHeaderTop>
      </PageHeader>
      <PageContent display="wide">
        <ItemsDataView />
      </PageContent>
    </Page>
  )
}
```

```jsx ItemsDataView.js
import {
  createColumns,
  useTableState,
  useDataViewState,
  usePaginationState,
  Table,
  THead,
  THeadCell,
  TBody,
  TBodyRow,
  TBodyCell,
  Tag,
  DataView,
  Pagination,
  Flex,
  DataViewHeader,
  Search,
  FlexSpacer,
  SelectionTree,
  IconPencil,
  IconLink,
  IconEye,
  IconTrash,
  useModalState,
  useBulkActions,
  useToast,
  DataViewActions,
  csx
} from '@vtex/admin-ui'
import { useMemo } from 'react'
import BulkActionsPanel from './BulkActionsPanel'
import { getPage, items } from './data'
import DeleteConfirmationModal from './DeleteConfirmationModal'
import ExportButton from './ExportButton'
import Filters from './Filters'
import ImportButton from './ImportButton'

const ITEMS_PER_PAGE = 25

export default function ItemsDataView() {
  const view = useDataViewState()
  const deleteModalState = useModalState()
  const showToast = useToast()

  const pagination = usePaginationState({
    pageSize: ITEMS_PER_PAGE,
    total: items.length,
  })

  const currentPageItems = useMemo(() => {
    return getPage({
      pageLength: ITEMS_PER_PAGE,
      currentPage: pagination.currentPage,
    })
  }, [pagination.currentPage])

  const bulkActionState = useBulkActions({
    totalItems: pagination.total,
    pageItems: currentPageItems,
    pageSize: ITEMS_PER_PAGE,
  })

  const columns = createColumns([
    {
      id: 'id',
      resolver: { type: 'bulk', state: bulkActionState },
      width: '3rem',
    },
    {
      id: 'name',
      header: 'Name',
    },
    {
      id: 'textField',
      header: 'Label',
      width: '5rem',
    },
    {
      id: 'tagField',
      header: 'Label',
      sortable: true,
      width: '8rem',
      resolver: {
        type: 'root',
        render: ({ item }) => {
          return <Tag label={item.tagField} />
        },
      },
    },
    {
      width: '5rem',
      resolver: {
        type: 'menu',
        actions: [
          {
            label: 'View details',
            icon: <IconEye />,
          },
          {
            label: 'Edit',
            icon: <IconPencil />,
          },
          {
            label: 'Copy URL',
            icon: <IconLink />,
            onClick: () =>
              showToast({
                message: 'Link copied to clipboard',
                variant: 'positive',
              }),
          },
          {
            label: 'Delete',
            icon: <IconTrash />,
            onClick: () => {
              deleteModalState.show()
            },
            critical: true,
          },
        ],
      },
    },
  ])

  const { data, getBodyCell, getHeadCell, getTable } = useTableState({
    status: view.status,
    columns,
    items: currentPageItems,
    length: ITEMS_PER_PAGE,
  })

  return (
    <DataView state={view}>
      <DataViewHeader>
        <Flex justify="space-between" className={csx({ width: '100%' })}>
          <Search />
          <FlexSpacer />
          <DataViewActions>
            <ImportButton />
            <ExportButton />
            <Pagination state={pagination} />
          </DataViewActions>
        </Flex>

        <BulkActionsPanel state={bulkActionState} />
        <DeleteConfirmationModal state={deleteModalState} />
      </DataViewHeader>
      <Filters />

      <SelectionTree state={bulkActionState.selectionTree}>
        <Table {...getTable()} className={csx({ width: '100%' })}>
          <THead>
            {columns.map((column) => (
              <THeadCell {...getHeadCell(column)} />
            ))}
          </THead>
          <TBody>
            {data.map((item) => {
              return (
                <TBodyRow key={item.id}>
                  {columns.map((column) => {
                    return <TBodyCell {...getBodyCell(column, item)} />
                  })}
                </TBodyRow>
              )
            })}
          </TBody>
        </Table>
      </SelectionTree>

      <Flex justify="flex-end" className={csx({ width: '100%', paddingTop: '$l' })}>
        <Pagination state={pagination} />
      </Flex>
    </DataView>
  )
}
```

```jsx DeleteConfirmationModal.js
import {
  Modal,
  ModalFooter,
  Button,
  ModalContent,
  ModalHeader,
  Text,
  useToast,
  csx
} from '@vtex/admin-ui'

const DeleteConfirmationModal = ({ state }) => {
  const showToast = useToast()

  const onSuccess = () => {
    showToast({
      variant: 'positive',
      message: 'Items successfully deleted',
    })
  }

  const onError = () => {
    showToast({
      variant: 'critical',
      message: 'Items could not be deleted because of a technical issue.',
      action: {
        label: 'Try again',
        onClick: () => alert('just tried again'),
      },
    })
  }

  return (
    <Modal
      aria-label="Delete action confirmation"
      state={state}
      size="small"
      className={csx({ maxWidth: '368px' })}
    >
      <ModalHeader title="Delete" />
      <ModalContent>
        <Text>
          This action is irreversible. Are you sure you want to delete this
          item?
        </Text>
      </ModalContent>
      <ModalFooter>
        <Button variant="secondary" onClick={() => state.hide()}>
          Cancel
        </Button>
        <Button
          variant="critical"
          onClick={() => {
            state.hide()
            onSuccess()
            // onError()
          }}
        >
          Delete
        </Button>
      </ModalFooter>
    </Modal>
  )
}

export default DeleteConfirmationModal
```

```jsx ExportButton.js
import {
  Modal,
  ModalFooter,
  Button,
  ModalContent,
  ModalHeader,
  Text,
  IconArrowLineUp,
  ModalDisclosure,
  useModalState,
  useToast,
  csx
} from '@vtex/admin-ui'

const ExportButton = () => {
  const modal = useModalState()
  const showToast = useToast()

  const onSuccess = () => {
    showToast({
      variant: 'positive',
      message: 'Items successfully exported',
    })
  }

  const onError = () => {
    showToast({
      variant: 'critical',
      message: 'Items could not be exported because of a technical issue',
      action: {
        label: 'Try again',
        onClick: () => alert('just tried again'),
      },
    })
  }

  return (
    <>
      <ModalDisclosure state={modal}>
        <Button variant="neutralTertiary" icon={<IconArrowLineUp />}>
          Export
        </Button>
      </ModalDisclosure>
      <Modal
        aria-label="Export confirmation"
        state={modal}
        size="small"
        className={csx({ maxWidth: '368px' })}
      >
        <ModalHeader title="Export" />
        <ModalContent>
          <Text>Are you sure you want to export these 3 selected items?</Text>
        </ModalContent>
        <ModalFooter>
          <Button variant="secondary" onClick={() => modal.hide()}>
            Cancel
          </Button>
          <Button
            onClick={() => {
              modal.hide()
              onSuccess()
              // onError()
            }}
          >
            Export
          </Button>
        </ModalFooter>
      </Modal>
    </>
  )
}

export default ExportButton
```

```jsx ImportButton.js
import {
  Modal,
  ModalFooter,
  Button,
  ModalContent,
  ModalHeader,
  Text,
  IconArrowLineDown,
  ModalDisclosure,
  useModalState,
  useToast,
  csx
} from '@vtex/admin-ui'

const ImportButton = () => {
  const modal = useModalState()
  const showToast = useToast()

  const onSuccess = () => {
    showToast({
      variant: 'positive',
      message: 'Items successfully imported',
    })
  }

  const onError = () => {
    showToast({
      variant: 'critical',
      message: 'Items could not be imported because of a technical issue.',
      action: {
        label: 'Try again',
        onClick: () => alert('just tried again'),
      },
    })
  }

  return (
    <>
      <ModalDisclosure state={modal}>
        <Button variant="neutralTertiary" icon={<IconArrowLineDown />}>
          Import
        </Button>
      </ModalDisclosure>
      <Modal
        aria-label="Import confirmation"
        state={modal}
        size="small"
        className={csx({ maxWidth: '368px' })}
      >
        <ModalHeader title="Import" />
        <ModalContent>
          <Text>Are you sure you want to import the items in file.csv?</Text>
        </ModalContent>
        <ModalFooter>
          <Button variant="secondary" onClick={() => modal.hide()}>
            Cancel
          </Button>
          <Button
            onClick={() => {
              modal.hide()
              onSuccess()
              // onError();
            }}
          >
            Import
          </Button>
        </ModalFooter>
      </Modal>
    </>
  )
}

export default ImportButton
```

```jsx Filters.js
import {
  FilterDisclosure,
  FilterListbox,
  FilterPopover,
  FilterOptionCheckbox,
  FilterOptionRadio,
  FilterFooter,
  FilterGroup,
  useFilterState,
  useFilterMultipleState,
  useFilterGroupState,
  csx
} from '@vtex/admin-ui'
import { filterOptions } from './data'

const Filters = () => {
  const radioFilter = useFilterState()
  const checkboxFilter = useFilterMultipleState()
  const dateFilter = useFilterState()

  const filterGroupState = useFilterGroupState({
    filterStates: [radioFilter, checkboxFilter, dateFilter],
  })

  return (
    <FilterGroup
      state={filterGroupState}
      className={csx({
        '> *:not(:first-child)': {
          marginLeft: '$m',
        },
      })}
    >
      <FilterDisclosure state={radioFilter}>Label</FilterDisclosure>

      <FilterPopover state={radioFilter}>
        <FilterListbox>
          {filterOptions.map((item) => (
            <FilterOptionRadio {...item} />
          ))}
        </FilterListbox>
        <FilterFooter />
      </FilterPopover>

      <FilterDisclosure state={checkboxFilter}>Label</FilterDisclosure>

      <FilterPopover state={checkboxFilter}>
        <FilterListbox>
          {filterOptions.map((item) => (
            <FilterOptionCheckbox {...item} />
          ))}
        </FilterListbox>
        <FilterFooter />
      </FilterPopover>

      <FilterDisclosure state={dateFilter}>Label</FilterDisclosure>

      <FilterPopover state={dateFilter}>
        <FilterListbox>
          <FilterOptionRadio id="day" label="Today" />
          <FilterOptionRadio id="week" label="Last 7 days" />
          <FilterOptionRadio id="month" label="Last month" />
          <FilterOptionRadio id="custom" label="Custom" />
        </FilterListbox>
        <FilterFooter />
      </FilterPopover>
    </FilterGroup>
  )
}

export default Filters
```

```jsx BulkActionsPanel.js
import {
  Button,
  BulkActions,
  IconPencil,
  IconCopySimple,
  IconTrash,
} from '@vtex/admin-ui'

const BulkActionsPanel = ({ state }) => {
  return (
    <BulkActions state={state}>
      <Button
        variant="tertiary"
        icon={<IconPencil />}
        onClick={() => alert('Should edit items')}
      >
        Edit
      </Button>
      <Button
        variant="tertiary"
        icon={<IconCopySimple />}
        onClick={() => alert('Should clone items')}
      >
        Clone
      </Button>
      <Button
        variant="criticalTertiary"
        icon={<IconTrash />}
        onClick={() => alert('Should delete items')}
      >
        Delete
      </Button>
    </BulkActions>
  )
}

export default BulkActionsPanel
```

```js data.js
export const items = [...Array(74).keys()].map((id) => {
  return {
    id: `${id}`,
    name: 'Name',
    textField: 'Text',
    tagField: 'Short text',
  }
})

export const getPage = ({ currentPage, pageLength }) => {
  const startingIndex = (currentPage - 1) * pageLength

  return items.slice(
    startingIndex,
    Math.min(items.length, startingIndex + pageLength)
  )
}

export const filterOptions = [...Array(5).keys()].map((id) => ({
  id,
  label: 'label',
}))
```

</Sandpack>
